--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,8 @@ build-master:
     - docker push "$CI_REGISTRY_IMAGE"
   only:
     - master
+  variables:
+    CI_DEBUG_TRACE: "true"
 
 build:
   # Official docker image.
